# cpp-sc2

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .versionrc  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classsc2_1_1_action_interface-members.html  classsc2_1_1_action_interface.html  classsc2_1_1_agent-members.html  classsc2_1_1_agent.html  classsc2_1_1_client-members.html  classsc2_1_1_client.html  classsc2_1_1_client_events-members.html  classsc2_1_1_client_events.html  classsc2_1_1_connection-members.html  classsc2_1_1_connection.html  classsc2_1_1_control_interface-members.html  classsc2_1_1_control_interface.html  classsc2_1_1_coordinator-members.html  classsc2_1_1_coordinator.html  classsc2_1_1_debug_interface-members.html  classsc2_1_1_debug_interface.html  classsc2_1_1_observation_interface-members.html  classsc2_1_1_observation_interface.html  classsc2_1_1_observer_action_interface-members.html  classsc2_1_1_observer_action_interface.html  classsc2_1_1_query_interface-members.html  classsc2_1_1_query_interface.html  (+117 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ladder.yml  publish_docs.yml
.travis/: before-install.sh  build.sh  configure.sh  install.sh  publish.sh
cmake/assets/: protos.cmake
cmake/toolchain/: x86-64-w64-mingw32.cmake
docs/: building.md  precompiled_libs.md  tutorial3.md
docs/html/: annotated.html  classes.html  classsc2_1_1_action_feature_layer_interface-members.html  classsc2_1_1_action_feature_layer_interface.html  classsc2_1_1_action_interface-members.html  classsc2_1_1_action_interface.html  classsc2_1_1_agent-members.html  classsc2_1_1_agent.html  classsc2_1_1_agent_control_interface-members.html  classsc2_1_1_agent_control_interface.html  classsc2_1_1_arg_parser-members.html  classsc2_1_1_arg_parser.html  classsc2_1_1_client-members.html  classsc2_1_1_client.html  classsc2_1_1_client_events-members.html  classsc2_1_1_client_events.html  classsc2_1_1_connection-members.html  classsc2_1_1_connection.html  classsc2_1_1_control_interface-members.html  classsc2_1_1_control_interface.html  classsc2_1_1_coordinator-members.html  classsc2_1_1_coordinator.html  classsc2_1_1_debug_interface-members.html  classsc2_1_1_debug_interface.html  classsc2_1_1_message_response_ptr-members.html  classsc2_1_1_message_response_ptr.html  classsc2_1_1_observation_interface-members.html  classsc2_1_1_observation_interface.html  classsc2_1_1_observer_action_interface-members.html  classsc2_1_1_observer_action_interface.html  classsc2_1_1_property_reader-members.html  classsc2_1_1_property_reader.html  classsc2_1_1_proto_interface-members.html  classsc2_1_1_proto_interface.html  classsc2_1_1_query_interface-members.html  classsc2_1_1_query_interface.html  classsc2_1_1_replay_control_interface-members.html  classsc2_1_1_replay_control_interface.html  (+242 more)
documentation/: codingStandards.docx  functionalNonfunctionalRequirements.docx  namingConventions.docx  riskAnalysis.docx  scheduling.docx  softwareRequirements.docx
examples/: CMakeLists.txt  annoying_helper.cc  bot_micro.cc  bot_mp.cc  bot_simple.cc  bot_wsl.cc  echo_actions.cc  feature_layers.cc  intermediate_bot.cc  proxy.cc  rendered.cc  replay.cc  save_load.cc  tutorial.cc
examples/common/: bot_examples.cc  bot_examples.h
search/: all_0.js  all_1.js  all_11.js  all_13.js  all_14.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  classes_7.js  classes_8.js  classes_b.js  classes_e.js  classes_f.js  enumvalues_1.js  enumvalues_8.js  functions_0.js  functions_1.js  functions_11.js  functions_4.js  functions_5.js  functions_7.js  functions_b.js  functions_f.js  pages_0.js  pages_2.js  searchdata.js  variables_0.js  variables_10.js  variables_13.js  variables_a.js  variables_d.js
src/: CMakeLists.txt
src/sc2api/: CMakeLists.txt  sc2_action.cc  sc2_action.h  sc2_agent.cc  sc2_agent.h  sc2_args.cc  sc2_args.h  sc2_client.cc  sc2_client.h  sc2_common.cc  sc2_common.h  sc2_connection.cc  sc2_control_interfaces.h  sc2_coordinator.cc  sc2_coordinator.h  sc2_data.cc  sc2_data.h  sc2_errors.h  sc2_game_settings.cc  sc2_game_settings.h  sc2_gametypes.h  sc2_interfaces.h  sc2_map_info.cpp  sc2_map_info.h  sc2_proto_interface.cc  sc2_proto_interface.h  sc2_proto_to_pods.cc  sc2_replay_observer.cc  sc2_score.cc  sc2_score.h  sc2_server.cc  sc2_server.h  sc2_typeenums.cc  sc2_unit.cc  sc2_unit.h  sc2_unit_filters.cc
src/sc2api/typeids/: sc2_4.10.0_typeenums.cpp  sc2_4.10.0_typeenums.h  sc2_4.10.4_typeenums.cpp  sc2_4.10.4_typeenums.h  sc2_5.0.10_typeenums.cpp  sc2_5.0.10_typeenums.h  sc2_5.0.12_typeenums.cpp  sc2_5.0.12_typeenums.h  sc2_5.0.14_typeenums.cpp  sc2_5.0.14_typeenums.h  sc2_5.0.5_typeenums.cpp  sc2_5.0.5_typeenums.h  sc2_types.h
src/sc2lib/: CMakeLists.txt  sc2_search.cc  sc2_search.h  sc2_utils.cc  sc2_utils.h
src/sc2protocol/: CMakeLists.txt
src/sc2renderer/: CMakeLists.txt  sc2_renderer.cc  sc2_renderer.h
src/sc2utils/: CMakeLists.txt  dirent.h  sc2_arg_parser.cc  sc2_arg_parser.h  sc2_manage_process.cc  sc2_property_reader.cc  sc2_property_reader.h  sc2_scan_directory.cc  sc2_scan_directory.h  sc2_simple_serialization.h
tests/: CMakeLists.txt  all_tests.cc  feature_layers_shared.cc  feature_layers_shared.h  test_ability_remap.cc  test_actions.cc  test_actions.h  test_app.cc  test_app.h  test_feature_layer.cc  test_feature_layer.h  test_feature_layer_mp.cc  test_feature_layer_mp.h  test_framework.cc  test_framework.h  test_movement_combat.cc  test_movement_combat.h  test_multiplayer.cc  test_multiplayer.h  test_observation_interface.cc  test_observation_interface.h  test_performance.cc  test_performance.h  test_rendered.cc  test_restart.cc  test_restart.h  test_snapshots.cc  test_snapshots.h  test_unit_command.cc  test_unit_command.h  test_unit_command_common.cc  test_unit_command_common.h
tests/unit/: CMakeLists.txt  test_ability_data.cc  test_score_details.cc
(+133 files in other folders)
